--- a/Program2/stil.css
+++ b/Program2/stil.css
@@ -1,5 +1,21 @@
 body {
-    margin: 2px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    min-width: 100vw;
+}
+
+header {
+    flex: 1;
+    order: 1;
+    background-color: chartreuse;
+    display: flex;
+    align-items: center;
+}
+footer {
+    flex: 2;
+    order: 2;
+    background-color: coral;
 }
 
 th,td {
@@ -8,22 +24,25 @@ th,td {
 }
 
 #lijevo {
-    position: relative;
-    top: 80px;
+    order: 1;
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
 }
 #desno {
-    position: relative;
-    top: 80px;
-    left: 27%;
+    order: 3;
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+    margin-left: 10px;
 }
 
 #tablica {
+    order: 2;
     font-size: 20px;
-    position: relative;
-    left: 5%;
 }
 #tablica td {
-    text-align: right;
+    text-align: center;
 }
 .data {
     text-align: center;
@@ -32,4 +51,8 @@ th,td {
     padding: 0;
     position: relative;
     left: 5px;
+}
+
+.table-bordered {
+    font-size: 20px;
 }
