--- a/Program2/stil.css
+++ b/Program2/stil.css
@@ -1,5 +1,7 @@
 body {
-    display: flex;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 300;
+    display: flex;                  /*za 'article' i 'footer'*/
     flex-direction: column;
     min-height: 100vh;
     background-color: #eee;
@@ -8,35 +10,39 @@ body {
 article {
     flex: 1;
     order: 1;
-    display: flex;
-    align-items: flex-end;
+    display: flex;          /*za 'prvo' i 'editgumbi'*/
+    align-items: flex-end;   
 }
 #prvo {
     order: 1;
-    display: flex;
+    width: 50%;
+    float: left;
+    display: flex;        /*za  'lijevo' , 'jedan' i 'desno'*/
     align-items: center;
 }
 #editGumbi {
     order: 2;
-    flex: 1;
+    width: 50%;
+    float: left;
     margin: 0;
 }
 #editGumbi > button {
+    flex: 1;
     border: none;
     color: #9197ae;
-    background-color: #07334E;
+    background-image: linear-gradient(#07334E, rgb(14, 79, 119));
+    /*background-color: #07334E;*/
     margin: 0;
     height: 40px;
-    width: 15%;
+    width: 100%;
 }
 #editGumbi > button:hover {
     border: 1px solid #9aa3c9;
+
 }
-@media screen and (max-width: 600px) {
-    #editGumbi > button {
-        width: 50vw;
-    }
-  }
+#editGumbi > button:active {
+    background-image: linear-gradient(rgb(14, 79, 119),#07334E);
+}
 
 footer {
     flex: 99;
@@ -49,6 +55,7 @@ th,td {
 }
 
 #lijevo {
+    flex: 1;
     order: 1;
     width: 50px;
     height: 50px;
@@ -57,11 +64,17 @@ th,td {
     border: none;
 }
 #jedan {
+    flex: 20;
     order: 2;
     font-size: 20px;
+    width: 100%;
     background-color: white;
 }
+#jedan td, #jedan th {
+    border: 1px solid black;
+}
 #desno {
+    flex: 1;
     order: 3;
     width: 50px;
     height: 50px;
@@ -74,15 +87,16 @@ th,td {
     border-radius: 5px;
 }
 
-
-
 #tablica {
+    width: 100%;
     font-size: 20px;
 }
 #tablica th {
     background-color: #9197ae;
+    border: 1px solid black;
 }
 #tablica td {
     background-color: #9aa3c8;
+    border: 1px solid black;
 }
 
