--- a/Program2/unos/stil.css
+++ b/Program2/unos/stil.css
@@ -1,4 +1,21 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 label, input, select {
     width: 100%;
     font-size: 30px;
+}
+input,select {
+    margin-bottom: 10px;
+}
+
+#submit {
+    color: #9197ae;
+    border: none;
+    padding: 5px;
+    background-image: linear-gradient(#07334E, rgb(14, 79, 119));
+}
+#submit:active {
+    background-image: linear-gradient(rgb(14, 79, 119),#07334E);
 }
