--- a/Program2/stil.css
+++ b/Program2/stil.css
@@ -1,40 +1,53 @@
+html,body {
+    height:100%;
+}
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 300;
     display: flex;                  /*za 'article' i 'footer'*/
     flex-direction: column;
     min-height: 100vh;
+    min-width: 100vw;
     background-color: #eee;
+    overflow-x: hidden;
+    margin: 0;
 }
 
-article {
-    flex: 1;
+header {
+    /*flex: 1;*/
     order: 1;
     display: flex;          /*za 'prvo' i 'editgumbi'*/
     align-items: flex-end;   
 }
 #prvo {
     order: 1;
-    width: 50%;
+    width: 50vw;
     float: left;
     display: flex;        /*za  'lijevo' , 'jedan' i 'desno'*/
     align-items: center;
 }
 #editGumbi {
     order: 2;
-    width: 50%;
-    float: left;
+    width: 50vw;
+    /*float: left;*/
     margin: 0;
+    display: flex;
+    flex-direction: row;
+    height: 100%;
 }
 #editGumbi > button {
     flex: 1;
-    border: none;
+    align-items: stretch;
+    border-top: 1px solid black;
+    border-left: 1px solid black;
+    border-right: none;
+    border-bottom: none;
     color: #9197ae;
     background-image: linear-gradient(#07334E, rgb(14, 79, 119));
     /*background-color: #07334E;*/
-    margin: 0;
-    height: 40px;
-    width: 100%;
+    /*margin: 0;*/  
+    font-size: 50px;
+    text-align: center;
 }
 #editGumbi > button:hover {
     border: 1px solid #9aa3c9;
@@ -44,9 +57,21 @@ article {
     background-image: linear-gradient(rgb(14, 79, 119),#07334E);
 }
 
-footer {
-    flex: 99;
+article {
+    /*flex: 99;*/
     order: 2;
+}
+
+footer {
+    /*flex: 1;*/
+    order: 3;
+    width: 100vw;
+    background-color: #ccc;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
 }
 
 th,td {
@@ -69,6 +94,7 @@ th,td {
     font-size: 20px;
     width: 100%;
     background-color: white;
+    border-collapse: collapse;
 }
 #jedan td, #jedan th {
     border: 1px solid black;
@@ -88,15 +114,32 @@ th,td {
 }
 
 #tablica {
-    width: 100%;
+    width: 100vw;
     font-size: 20px;
+    border-collapse: collapse;
 }
 #tablica th {
     background-color: #9197ae;
     border: 1px solid black;
+    padding: 5px;
+    text-align: center;
 }
 #tablica td {
     background-color: #9aa3c8;
     border: 1px solid black;
+    padding: 5px;
+    text-align: center;
 }
+
+input[type=checkbox]
+{
+  /* Double-sized Checkboxes */
+  -ms-transform: scale(2); /* IE */
+  -moz-transform: scale(2); /* FF */
+  -webkit-transform: scale(2); /* Safari and Chrome */
+  -o-transform: scale(2); /* Opera */
+  transform: scale(2);
+  padding: 10px;
+}
+
 
