--- a/Program2/stil.css
+++ b/Program2/stil.css
@@ -17,7 +17,12 @@ header {
     /*flex: 1;*/
     order: 1;
     display: flex;          /*za 'prvo' i 'editgumbi'*/
-    align-items: flex-end;   
+    align-items: flex-end;
+    position: sticky;
+    top: 0;
+    z-index: 1; 
+    background-color: #eee;
+    border-bottom: 1px solid black;
 }
 #prvo {
     order: 1;
@@ -34,8 +39,6 @@ header {
     display: flex;
     flex-direction: row;
     height: 100%;
-    position: sticky;
-    top: 0;
 }
 #editGumbi > button {
     flex: 1;
