--- a/Program2/stil.css
+++ b/Program2/stil.css
@@ -17,7 +17,7 @@ header {
     /*flex: 1;*/
     order: 1;
     display: flex;          /*za 'prvo' i 'editgumbi'*/
-    align-items: flex-end;
+    align-items: flex-end;  
     position: sticky;
     top: 0;
     z-index: 1; 
@@ -65,6 +65,7 @@ header {
 article {
     /*flex: 99;*/
     order: 2;
+    width: 100%;
 }
 
 footer {
@@ -119,7 +120,7 @@ th,td {
 }
 
 #tablica {
-    width: 100vw;
+    width: 100%;
     font-size: 20px;
     border-collapse: collapse;
 }
@@ -128,12 +129,14 @@ th,td {
     border: 1px solid black;
     padding: 5px;
     text-align: center;
+    /*width: 12,5%;*/
 }
 #tablica td {
     background-color: #9aa3c8;
     border: 1px solid black;
     padding: 5px;
     text-align: center;
+    /*width: 12,5%;*/
 }
 
 input[type=checkbox]
@@ -145,6 +148,15 @@ input[type=checkbox]
   -o-transform: scale(2); /* Opera */
   transform: scale(2);
   padding: 10px;
+}
+
+.sort {
+    font-family:Arial, FontAwesome;
+    position: relative;
+    margin: 5px;
+    width: 47%;
+    font-size: 20px;
+    
 }
 
 
