--- a/Program2/stil.css
+++ b/Program2/stil.css
@@ -69,8 +69,8 @@ header {
 /*----------------------------------------------------------------------------------------------------*/
 
 #scroll {
-    position: sticky;
-    top: 0;
+    /*position: sticky;
+    top: 0;*/
     z-index: 1;
     background-color: #eee;
 }
