--- a/Program2/prijava/prijavaCSS.css
+++ b/Program2/prijava/prijavaCSS.css
@@ -8,6 +8,7 @@ body {
     min-width: 100vw;
     background-color: #eee;
     overflow-x: hidden;
+    overflow-y: hidden;
     margin: 0;
 }
 
@@ -26,8 +27,9 @@ header {
 }
 
 article {
-    flex: 8;
+    /*flex: 8;*/
     order: 2;
+    height: 75vh;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -38,25 +40,20 @@ article {
 footer {
     /*flex: 1;*/
     order: 3;
-    height: 10vh;
+    height: 12vh;
     width: 100vw;
     background-color: #ccc;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 10px;
+    padding-top: 15px;
     text-align: center;
 }
 
 input, label {
-    width: 90%;
+    width: 320px;
     font-size: 20px;
-}
-
-h1 {
-    margin: 0;
-    font-size: 40px;
 }
 
 #naslovna {
@@ -64,14 +61,14 @@ h1 {
     height: 50px;
 }
 
-button {
-    width: 90%;
+#button, button {
+    width: 320px;
     font-size: 20px;
     color: #9197ae;
     background-image: linear-gradient(#07334E, rgb(14, 79, 119));
     border: none;
     padding: 5px;
 }
-button:active {
+#button:active, button:active {
     background-image: linear-gradient(rgb(14, 79, 119),#07334E);
 }
